Fixed landing sections to look nicer on mobile.

--- a/src/components/landing-section.css
+++ b/src/components/landing-section.css
@@ -11,3 +11,10 @@
   flex-direction: column;
   justify-content: center;
 }
+
+@media only screen and (max-width: 769px) {
+  .reverse-row-order {
+    flex-direction: column-reverse;
+    display: flex;
+  }
+}
